[package]
name = "code_timer"
version = "0.1.0"
authors = ["rusty-shell <62416744+rusty-shell@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A library to measure code execution time (native + wasm)"
repository = "https://github.com/rusty-shell/code_timer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
